make accounting report
