# docs/swagger.json
@@ -4,6 +4,40 @@
         "contact": {}
     },
     "paths": {
+        "/accounting/report_link": {
+            "post": {
+                "description": "Метод по году и месяцу возвращает ссылку на скачивание отчёта",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounting"
+                ],
+                "summary": "Получение ссылки с отчётом за месяц",
+                "parameters": [
+                    {
+                        "description": "Входные параметры",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/avito2022_internal_app_api.ReportRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/avito2022_internal_app_api.ReportLink"
+                        }
+                    }
+                }
+            }
+        },
         "/balance/get_balance": {
             "post": {
                 "description": "Возвращает баланс пользователя по его id",
@@ -24,7 +58,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.UserID"
+                            "$ref": "#/definitions/internal_app_api.UserID"
                         }
                     }
                 ],
@@ -32,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.Balance"
+                            "$ref": "#/definitions/internal_app_api.Balance"
                         }
                     }
                 }
@@ -58,7 +92,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.Transfer"
+                            "$ref": "#/definitions/internal_app_api.Transfer"
                         }
                     }
                 ],
@@ -86,7 +120,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.BalanceReplenishment"
+                            "$ref": "#/definitions/internal_app_api.BalanceReplenishment"
                         }
                     }
                 ],
@@ -117,7 +151,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.DebitingMoney"
+                            "$ref": "#/definitions/internal_app_api.DebitingMoney"
                         }
                     }
                 ],
@@ -145,7 +179,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.Reserve"
+                            "$ref": "#/definitions/internal_app_api.Reserve"
                         }
                     }
                 ],
@@ -173,7 +207,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.Refund"
+                            "$ref": "#/definitions/internal_app_api.Refund"
                         }
                     }
                 ],
@@ -201,7 +235,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/avito2022_internal_app_api.Confirmation"
+                            "$ref": "#/definitions/internal_app_api.Confirmation"
                         }
                     }
                 ],
@@ -269,6 +303,22 @@
             "properties": {
                 "order_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "avito2022_internal_app_api.ReportLink": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                }
+            }
+        },
+        "avito2022_internal_app_api.ReportRequest": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
                 }
             }
         },
@@ -375,6 +425,22 @@
             "properties": {
                 "order_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "internal_app_api.ReportLink": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_app_api.ReportRequest": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
                 }
             }
         },
